<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jetris</string>
    <string name="title_activity_jetris_main">Jetris</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="marathon_mode">Marathon Mode</string>
    <string name="time_attack_mode">Time Attack Mode</string>
    <string name="new_marathon_game">New Marathon Game</string>
    <string name="new_time_attack_game">New Time Attack Game</string>
    <string name="load_game">Load Game</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="about">About Jetris</string>
    <string name="update_text">If you first installed this game before March 7th, 2014, it is highly recommended that you reset your settings even if you\'ve never changed them. You can do so by going to Settings -> Scroll Down -> Reset All Settings. This message will disappear the next time you start this app.</string>
    <string name="action_pause">Pause</string>
    <string name="action_unpause">Unpause</string>
    <string name="controls_title">Controls</string>
    <string name="scoring_title">Scoring</string>
    <string name="game_variables_title">Game Variables</string>
    <string name="speeds_title">Speed Variables</string>
    <string name="marathon_title">Marathon Variables</string>
    <string name="time_attack_title">Time Attack Variables</string>
    <string name="timer_variables_title">Timer Variables</string>
    <string name="sensitivity_title">Sensitivity Variables</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="tap_hold_title">Tap to Hold</string>
    <string name="tap_hold_summary">Current piece is held when the hold box is tapped.</string>
    <string name="tspin_title">T-Spin System</string>
    <string name="tspin_summary">The t-spin recognition system used for scoring.</string>
    <string name="default_grav_title">Base Drop Speed</string>
    <string name="default_grav_message">The base drop speed of the blocks.
        \nUnits: Lines/33 Milliseconds
        \nFrom 0.0 to 20.0 (Default: 0.033) </string>
    <string name="lines_per_level_title">Lines Per Level</string>
    <string name="lines_per_level_message">The number of lines needed to clear to advance a level.
        \nUnits: Lines
        \nFrom 1 to 2147483647 (Default: 10)</string>
    <string name="starting_level_title">Starting Level</string>
    <string name="starting_level_message">The level that you spawn in for marathon mode.
        \nFrom 1 to 2147483647 (Default: 1)</string>
    <string name="dropspeed_title">Drop Speed System</string>
    <string name="gravity_multiply_per_level_title">Geometric Drop Speed per Level</string>
    <string name="gravity_multiply_per_level_message">The ratio at which the drop speed increases by per level.
        \nFrom 0.0 to 20.0 (Default: 1.38)</string>
    <string name="gravity_add_per_level_title">Linear Drop Speed per Level</string>
    <string name="gravity_add_per_level_message">The speed added to the base drop speed per level.
        \nUnits: Lines/33 Milliseconds
        \nFrom 0.0 to 20.0 (Default: 0.025)</string>
    <string name="change_slack_length_title">Variable Delay</string>
    <string name="change_slack_length_summary">Delay decreases once max dropspeed is reached.</string>
    <string name="FPS_title">Frame Rate</string>
    <string name="FPS_message">The frame rate of the game.
        \nNote: A faster frame rate increases the base drop speed of the blocks.
        \nUnits: Frames/Second
        \nFrom 1 to 60 (Default: 30) </string>
    <string name="flick_sensitivity_title">Flick Sensitivity</string>
    <string name="flick_sensitivity_message">The sensitivity threshold of the flick gestures.
		\nUnits: Velocity of Swipe (Pixels/Detection Cycle)
        \nFrom 1 to 2147483647 (Default: 30) </string>
    <string name="slack_length_title">Delay</string>
    <string name="slack_length_message">The delay before a block locks in place.
        \nUnits: Milliseconds
        \nFrom 0 to 2147483647 (Default: 1000) </string>
    <string name="soft_drop_speed_title">Base Soft Drop Speed</string>
    <string name="soft_drop_speed_message">The base drop speed of the block while soft dropping.
        \nUnits: Lines/Frame
        \nFrom 0.0 to 20.0 (Default: 0.45) </string>
    <string name="drag_sensitivity_title">Drag Sensitivity</string>
    <string name="drag_sensitivity_message">The length needed to drag before the "drag gesture" is recognized.
        \nUnits: Pixels
        \nFrom 0 to 2147483647 (Default: 60) </string>
    <string name="count_down_time_title">Time Attack</string>
    <string name="count_down_time_message">The starting time of Time Attack.
       	\nUnits: Seconds
       	\nFrom 0 to 2147483647 (Default: 120) </string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">App will be restart when you return to the previous screen.</string>
    <string name="dark_background_title">Black Background for Dark Theme</string>
    <string name="dark_background_summary">Highly recommended. Works best on AMOLED screens.</string>
    <string name="reset_highscores_title">Reset Highscores</string>
    <string name="reset_settings_title">Reset All Settings</string>
    <string name="reset_settings_summary">Misc settings will be kept.</string>
    <string name="controls_info">Controls:
        \n\t  Move Left/Right: Drag Left/Right
        \n\t	Hard Drop: Swipe Down
        \n\t	Soft Drop: Drag Down
        \n\t	Hold Block: Swipe Up</string>
    <string name="scoring_info"> Scoring:
    	\n\t	Base Points:
    	\n\t\t	Single: 100
    	\n\t\t	Double: 300
    	\n\t\t	Triple: 500
    	\n\t\t	Tetris: 800
    	\n\t Base Twist (T-spin) Points:
    	\n\t\t	No-Clear, Kicked: 100
    	\n\t\t	No-Clear, Not Kicked: 400
    	\n\t\t	Single, Kicked: 200
    	\n\t\t	Single, Not Kicked: 800
    	\n\t\t	Double: 1200
    	\n\t\t	Triple: 1600
    	\n\t Back to Back Tetris/Twist Clear: Base Points * 1.5
    	\n\t Chaining: 50 * Chain #
    	\n\t 
    	\n\t No-Clear Twists only give points in 3-corner T mode.
    	\n\t Only T-Tetriminos can twist in 3-corner T mode. </string>
    <string name="about_info">\nVersion: 1.0.4
        \nProduced by Jerry Jiang (tpcstld)
        \nLogo by Margaret Lu 
        \n
        \nJetris is an open source project. If you wish to contribute to Jetris, please go to
        \nwww.github.com/tpcstld/Jetris</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About Jetris</string>
    <string name="hello_world">Hello world!</string>

</resources>