<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="com.tpcstld.jetris.SettingsFragment"
        android:title="@string/speeds_title" >
        <extra
            android:name="settings"
            android:value="Speed Variables" />
    </header>
    <header
        android:fragment="com.tpcstld.jetris.SettingsFragment"
        android:title="@string/timer_variables_title" >
        <extra
            android:name="settings"
            android:value="Timer Variables" />
    </header>
    <header
        android:fragment="com.tpcstld.jetris.SettingsFragment"
        android:title="@string/sensitivity_title" >
        <extra
            android:name="settings"
            android:value="Sensitivity Variables" />
    </header>
    <header
        android:fragment="com.tpcstld.jetris.SettingsFragment"
        android:title="@string/misc_title" >
        <extra
            android:name="settings"
            android:value="Misc" />
    </header>

</preference-headers>