<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Settings" >

    <Button
        android:id="@+id/FPS_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/default_gravity_button"
        android:layout_alignRight="@+id/default_gravity_button"
        android:layout_below="@+id/default_gravity_button"
        android:text="@string/FPS_title"
        android:onClick="openFPSDialog" />

    <Button
        android:id="@+id/flick_sensitivity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/FPS_button"
        android:layout_alignRight="@+id/FPS_button"
        android:layout_below="@+id/FPS_button"
        android:text="@string/flick_sensitivity_title"
        android:onClick="openFlickSensitivity" />

    <Button
        android:id="@+id/slack_length_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/flick_sensitivity_button"
        android:layout_alignRight="@+id/flick_sensitivity_button"
        android:layout_below="@+id/flick_sensitivity_button"
        android:text="@string/slack_length_title"
        android:onClick="openSlackLength" />

    <Button
        android:id="@+id/soft_drop_multiplier_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/slack_length_button"
        android:layout_alignRight="@+id/slack_length_button"
        android:layout_below="@+id/slack_length_button"
        android:text="@string/soft_drop_speed_title"
        android:onClick="openSoftDropMultiplier" />

    <Button
        android:id="@+id/default_gravity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:text="@string/default_grav_title"
        android:onClick="openDefaultGravityDialog" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/game_variables_title" />

    <Button
        android:id="@+id/drag_sensitivity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/soft_drop_multiplier_button"
        android:layout_alignRight="@+id/soft_drop_multiplier_button"
        android:layout_below="@+id/soft_drop_multiplier_button"
        android:onClick="openDragSensitivity"
        android:text="@string/drag_sensitivity_title" />

</RelativeLayout>
