<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/controls_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controls_info" />

        <TextView
            android:id="@+id/scoring_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/controls_info"
            android:text="@string/scoring_info" />

        <TextView
            android:id="@+id/about_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scoring_info"
            android:text="@string/about_info" />
    </RelativeLayout>

</ScrollView>